--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
 </head>
 <body>
     <div data-bind="component: {name: 'home-page', params: {title:'Yo',initName: 'Bill'}}"/>
-    <script src="./dist/wpack/bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js"></script>
+    <script>
+        require.config({
+            baseUrl: './',
+            paths: {
+                "knockout": "./node_modules/knockout/build/output/knockout-latest.debug",
+                "immutable": "./node_modules/immutable/dist/immutable",
+                "reflect-metadata": "./node_modules/reflect-metadata/reflect",
+                "text": "./node_modules/text/text",
+                "jquery": "./node_modules/jquery/dist/jquery",
+                "inversify": "./node_modules/inversify/dist/inversify",
+                "rxjs": "./node_modules/rxjs/bundles/Rx.umd"
+            }
+        });
+        require(['reflect-metadata','build/amd/main.js']);
+    </script>
 </body>
 </html>
